--- a/app/css/vote-widget.css
+++ b/app/css/vote-widget.css
@@ -1,2 +1,9 @@
-div.vote-widget {}
-div.vote-widget div { border: 1px solid red;}
+div.vote-widget {
+    font-family: helvetica, verdana, sans;
+}
+div.vote-widget>div { margin: 0px 3px 20px 3px;}
+div.vote-widget div { border: 0px solid red;}
+
+div.vote-widget form { margin: 5px 0;}
+div.vote-widget form .formelement { margin: 3px;}
+div.vote-widget form .formlabel { width: 180px; float: left;}
